[project]
name = "taskgraph"
description = "Parallel task graph framework"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Natural Capital Alliance Software Team"}
]
keywords = ["parallel", "multiprocessing", "distributed", "computing"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Distributed Computing",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License"
]
# the version is provided dynamically by setuptools_scm
dynamic = ["version"]
dependencies = [
    "retrying>=1.3.0",
]

[project.optional-dependencies]
niced_processes = ["psutil"]


[build-system]
requires = [
    'wheel', 'setuptools_scm>=8.0'
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
